# stm32-os

./: Cargo.toml  README.md  build.rs  makefile  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
src/: allocator.rs  circ_buffer.rs  main.rs  panic.rs  peripherals.rs  process.rs  scheduler.rs  shell.rs  syscall.rs  tasks.rs  trap.rs
src/allocator/: memory.rs  symbols.rs
src/asm/: boot.S  context_switch.S  trap.S
src/peripherals/: core.rs  exti.rs  gpio.rs  rcc.rs  usart.rs
src/shell/: commands.rs  parser.rs
src/tasks/: dispatcher.rs
src/trap/: critical_section.rs  irq_handlers.rs  usart.rs
