[package]
authors = ["Sparpvp <74677348+Sparpvp@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "booting"
version = "0.1.0"

[dependencies]
cortex-m-semihosting = "0.3.3"
volatile-register = "0.2.2"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "booting"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
